# vaapi-tegra-driver

./: CMakeLists.txt  LICENSE  README.md  buffer.h  context.h  gem.cpp  gem.h  host1x.h  main.cpp  objects.cpp  objects.h  vic.cpp  vic.h  vic04.h
engine_headers/: host1x.h  nvdec.h  vic04.h
engines/: nvdec.cpp  nvdec.h  vic.cpp  vic.h
uapi_headers/: tegra_drm.h
